# CbmGetTerms

./: README.md  install.sh
src/: AnalysisCode.cpp  CMakeLists.txt
src/CbmCut/: CbmCut.cxx  CbmCut.h  README.md
src/CentralityTool/: CentParams.h  CentralityTool.cxx  CentralityTool.h  README.md
src/DuplicateRemover/: DuplicateRemover.cxx  DuplicateRemover.h  README.md
src/EffMaker/: EffMaker.cxx  EffMaker.h
src/IdxConstants/: IdxConstants.cxx  IdxConstants.h  README.md
src/MultiplicityTool/: MultiplicityTool.cxx  MultiplicityTool.h
src/QualityController/: QualityController.cxx  QualityController.h
submit/: calc.sh  conf.py  manager.py  merge.py  merge.sh  resubmit.sh  run.sh  template.cfg
